remove example app and make it more like a library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,6 @@
 cmake_minimum_required(VERSION 3.14)
 
-project(QtFirebase)
+project(qt-firebase-sdk)
 
-add_subdirectory(app)
-add_subdirectory(qt-firebase-sdk)
+add_subdirectory(src)
 add_subdirectory(thirdparty)
